Intermittent mingw /builds/worker/workspace/build/src/widget/windows/WindowsUIUtils.cpp:283:1: error: no template named 'Result'
Categories
(Core :: Widget: Win32, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox74 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: saschanaz)
References
(Regression)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [stockwell unknown])
Attachments
(2 files)
Filed by: opoprus [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=287716426&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/TKpqMID9Tw2VmiVTh4JT3w/runs/0/artifacts/public/logs/live_backing.log
[task 2020-02-06T11:45:49.635Z] 11:45:49 ERROR - /builds/worker/workspace/build/src/widget/windows/WindowsUIUtils.cpp:283:1: error: no template named 'Result'
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - Result<HStringUniquePtr, HRESULT> ConvertToWindowsString(
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - ^
[task 2020-02-06T11:45:49.635Z] 11:45:49 ERROR - /builds/worker/workspace/build/src/widget/windows/WindowsUIUtils.cpp:289:12: error: use of undeclared identifier 'Err'; did you mean 'mozilla::Err'?
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - return Err(hr);
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - ^~~
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - mozilla::Err
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/Result.h:526:30: note: 'mozilla::Err' declared here
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - inline GenericErrorResult<E> Err(E&& aErrorValue) {
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - ^
[task 2020-02-06T11:45:49.635Z] 11:45:49 ERROR - /builds/worker/workspace/build/src/widget/windows/WindowsUIUtils.cpp:289:12: error: no viable conversion from returned value of type 'GenericErrorResult<long &>' to function return type 'int'
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - return Err(hr);
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - ^~~~~~~
[task 2020-02-06T11:45:49.635Z] 11:45:49 ERROR - /builds/worker/workspace/build/src/widget/windows/WindowsUIUtils.cpp:291:10: error: no viable conversion from returned value of type 'HStringUniquePtr' (aka 'UniquePtr<HSTRING__ *, HStringDeleter>') to function return type 'int'
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - return HStringUniquePtr(rawStr);
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - ^~~~~~~~~~~~~~~~~~~~~~~~
[task 2020-02-06T11:45:49.635Z] 11:45:49 ERROR - /builds/worker/workspace/build/src/widget/windows/WindowsUIUtils.cpp:340:36: error: use of undeclared identifier 'MozPromiseHolder'
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - mozilla::media::Refcountable<MozPromiseHolder<SharePromise>>>();
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - ^
[task 2020-02-06T11:45:49.635Z] 11:45:49 ERROR - /builds/worker/workspace/build/src/widget/windows/WindowsUIUtils.cpp:340:36: error: use of undeclared identifier 'MozPromiseHolder'
[task 2020-02-06T11:45:49.635Z] 11:45:49 ERROR - /builds/worker/workspace/build/src/widget/windows/WindowsUIUtils.cpp:340:67: error: expected a type
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - mozilla::media::Refcountable<MozPromiseHolder<SharePromise>>>();
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - ^
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - 6 warnings and 7 errors generated.
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - /builds/worker/workspace/build/src/config/rules.mk:744: recipe for target 'WindowsUIUtils.o' failed
[task 2020-02-06T11:45:49.635Z] 11:45:49 ERROR - make[4]: *** [WindowsUIUtils.o] Error 1
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/widget/windows'
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - make[4]: *** Waiting for unfinished jobs....
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/layout/base'
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - layout/base/Unified_cpp_layout_base2.o
[task 2020-02-06T11:45:49.635Z] 11:45:49 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/layout/base'
[task 2020-02-06T11:45:52.268Z] 11:45:52 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/layout/forms'
Comment 1•5 years ago
|
||
Can anybody of you fix this, please?
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
Comment 5•5 years ago
|
||
The issue is still present: https://treeherder.mozilla.org/#/jobs?repo=autoland&resultStatus=superseded%2Ctestfailed%2Cbusted%2Cexception%2Crunnable&revision=0ae6d45666391c9faa8504af7fea808eb934dfdb&selectedJob=287738317
| Assignee | ||
Comment 6•5 years ago
|
||
Updated•5 years ago
|
Comment 8•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/0ae6d4566639
https://hg.mozilla.org/mozilla-central/rev/442f57db73ea
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Description
•