Bug 1613643 - Fix build failure by Result<>

Differential Revision: https://phabricator.services.mozilla.com/D61818